# uzu

./: .clang-format  .cursorrules  .env.sample  .gitignore  .swift-format  CODEOWNERS  Cargo.toml  DFLASH_PR_PLAN.md  FUSED_GDN_PLAN.md  GDN_FUSION_MEGA_PLAN.md  Package.swift  README.md  REFACTOR.md  autogen.py  bench_results_2026-05-26.md  deny.toml  dinghy.toml  flake.nix  m4_cross_simdgroup_contention_observation.md  metalfmt.toml  mpsgraph-rs  nf4_lut_investigation.md  platforms.toml  rust-analyzer.toml  rust-toolchain.toml  rustfmt.toml  simdgroup_lut_implementation_plan.md  temperature.air  test_bfloat.air
app/: Cargo.toml
app/mirai-app/: Cargo.toml  TESTING.md  TODO.md  bundle.sh
app/mirai-app/src/: app_shell.rs  assets.rs  data_ops.rs  engine.rs  main.rs  menu_bar.rs  models_store.rs  native_dialog.rs  persistence.rs  provider_keys.rs  startup.rs  title_gen.rs  toast.rs  tts_history.rs  ui_snapshot.rs
app/ui-kit/: Cargo.toml
app/ui-kit/src/: lib.rs  theme.rs  tokens.rs
apps/mirai/: Cargo.toml  rust-toolchain.toml
apps/mirai/mirai-app/: Cargo.toml  TESTING.md  TODO.md  build.rs  bundle.sh
apps/mirai/ui-kit/: Cargo.toml
bindings/python/: README.md  pyproject.toml
bindings/python/examples/: chat.py  chat_cloud.py  chat_for_classification.py  chat_speculation_summarization.py  classifier.py  quick_start.py  snippets.py  ssm.py  structured_output.py  summarization.py  text_to_speech.py
bindings/python/tests/: test_engine.py
bindings/python/uzu/: __init__.py  __init__.pyi
crates/backend-remote/: Cargo.toml
crates/backend-uzu/: Cargo.toml
crates/backend-uzu/benches/: BENCHMARKS.md  M5_SMALL_M_REPORT.md  gram.md  gram.rs  main.rs
crates/backend-uzu/examples/: engine.rs  engine_classifier.rs  engine_grammar.rs  engine_speculator.rs  engine_speculator_grammar.rs  gemv_profile.rs
crates/backend-uzu/src/: array.rs  data_type.rs  inference_backend.rs  lib.rs  prelude.rs  staging.rs  trie.rs
crates/backend-uzu/tests/: BENCHMARKS.md  integration_entry.rs  integration_main.rs  performance_entry.rs  performance_main.rs
crates/backend-uzu/unit/: bench_cold_pool_test.rs  staging.rs  trie_test.rs
crates/benchmarks/: Cargo.toml
crates/benchmarks/examples/: memory_diagnostic.rs
crates/benchmarks/src/: lib.rs  mlp_fused_bench.rs
crates/bindings/: Cargo.toml
crates/bindings/src/: lib.rs  napi.rs  pyo3.rs  uniffi.rs  wasm.rs
crates/cargo-keisoku/: Cargo.toml  README.md
crates/cargo-keisoku/src/: calibrate.rs  main.rs  model.rs  predict.rs  report.rs
crates/cli/: Cargo.toml
crates/cli-old/: Cargo.toml
crates/cli-release/: Cargo.toml
crates/cli-release/scripts/: sync_into_repo.sh  ts_build.sh  ts_napi_build.sh  zip_xcframework.sh
crates/cli-release/src/: lib.rs  main.rs
crates/cli-storage/: Cargo.toml
crates/cli-storage/src/: app.rs  events.rs  main.rs  models.rs  sections.rs  ui.rs
crates/cli-tools/: Cargo.toml
crates/cli-tools/src/: lib.rs  main.rs
crates/cli/src/: bench.rs  lib.rs  main.rs  speculator_args.rs
crates/cli/tests/: chat_completions.rs
crates/debug-display/: Cargo.toml
crates/debug-display/src/: lib.rs
crates/denryoku/: Cargo.toml  build.rs
crates/denryoku/examples/: dump.rs
crates/denryoku/src/: client.rs  component.rs  lib.rs  sensor.rs  sys.rs
crates/download-manager/: Cargo.toml
crates/download-manager-v2/: Cargo.toml
crates/download-manager-v2/src/: checked_file_state.rs  crc_utils.rs  file_download_manager.rs
crates/download-manager-v2/tests/: phase0_statig_shape.rs  test_apple_download_io.rs  test_create_download_manager.rs  test_generic_file_download_task.rs  test_public_state_projector.rs  test_reducer_startup.rs  test_universal_download_io.rs  test_universal_manager.rs
crates/download-manager/docs/: STATE_REDUCTION_DECISION_MATRIX.md
crates/download-manager/examples/: cross_platform_download.rs
crates/download-manager/src/: checked_file_state.rs  crc_utils.rs  download_error.rs  download_info.rs  download_log_event.rs  download_manager_state.rs  download_state.rs  file_check.rs  file_download_event.rs  file_download_manager.rs  file_download_phase.rs  file_download_state.rs  file_download_task.rs  file_state.rs  internal_download_state.rs  lib.rs  lock_file_info.rs  lock_file_state.rs  lock_manager.rs  manager_core.rs  utils.rs  v2_adapter.rs
crates/download-manager/tests/: phase0_apple_active_task.rs  test_apple_download_io.rs  test_apple_manager_comprehensive.rs  test_apple_manager_global_broadcast.rs  test_apple_manager_lock_file.rs  test_apple_manager_resume_data_cleanup.rs  test_apple_manager_resume_data_modify.rs  test_download_io.rs  (+7 more)
crates/dsl/: Cargo.toml
crates/hanashi/: Cargo.toml  build.rs
crates/heap_bench/: Cargo.toml
crates/igata/: Cargo.toml
crates/json-transform/: Cargo.toml
crates/kanka/: Cargo.toml  README.md
crates/keisoku/: Cargo.toml  README.md  build.rs
crates/kiban/: Cargo.toml  README.md
tools/: bench_mpp_ios.sh  pyproject.toml
tools/data_exporter/: main.py  model.py  model_capabilities.py  utils.py
tools/downloader/: main.py  model.py  utils.py
tools/gpu_trace/: __init__.py  __main__.py  export.py  extractors.py  formatting.py  gputrace.py  main.py  progress.py  pyproject.toml  recorder.py  serialization.py
tools/helpers/: main.py  model.py  pyproject.toml  utils.py
tools/matmul_bench/: pyproject.toml
tools/matmul_profile/: Cargo.toml
tools/model_compare/: formatting.py  pyproject.toml  runner.py
tools/performance/: .gitignore  main.py  pyproject.toml
tools/power_model/: curve.py  main.py  measurements.py  prediction.py
uzu/: Cargo.toml  build.rs
uzu/examples/: dequantize_qkv_layer0.rs  quant_matmul_experiments.rs
uzu/src/: array.rs  context_registry.rs  data_type.rs  decoder_runner.rs  device_context.rs  env_utils.rs  lib.rs  quant_matmul.rs  root_dir.rs  storage.rs
uzu/tests/: attention_kernel_test.rs  context_kv_cache_test.rs  decoder_test.rs  generator_test.rs  parameters_loader_test.rs  rms_norm_kernel_test.rs  safetensors_metadata_test.rs  sampling_test.rs  split_tensor_datas_test.rs  tracer_test.rs
(+4859 files in other folders)
