[workspace]
members = ["crates/cli", "crates/uzu", "crates/benchmarks"]
resolver = "3"

[workspace.package]
version = "0.1.7"
edition = "2024"
rust-version = "1.92"
license = "MIT"
authors = ["Mirai Tech <https://trymirai.com>"]
repository = "https://github.com/trymirai/uzu"

[workspace.dependencies]
benchmarks = { path = "crates/benchmarks" }
uzu = { path = "crates/uzu" }
xgrammar = { package = "xgrammar-rs", version = "0.1.29", features = ["hf"] }
half = { version = "2.7.1", features = ["bytemuck", "num-traits"] }
ndarray = "0.17.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.149"
thiserror = "2.0.18"
tokenizers = "0.22.2"
mpsgraph = "0.2.0"
objc2 = "0.6.3"
objc2-foundation = "0.3.2"
metal = { package = "mtl-rs", version = "0.1.4" }
block2 = "0.6.2"
bytemuck = "1.23.2"
num-traits = "0.2.19"
regex = "1.12.2"
libc = "0.2.175"
bitflags = "2.9.4"
minijinja = "2.12.0"
minijinja-contrib = { version = "2.15.1", features = ["pycompat"] }
clap = { version = "4.5.56", features = ["derive"] }
rand = "0.9.2"
sysinfo = "0.38.0"
itertools = "0.14.0"
schemars = { version = "1.2.0", features = ["derive"] }
is_close = "0.1.3"
serde_json5 = "0.2.1"
anyhow = "1.0.100"
async-trait = "0.1.89"
bindgen = "0.72.1"
walkdir = "2.5.0"
depfile = "0.1.1"
tempfile = "3.24.0"
clang-ast = "0.1.35"
futures = "0.3"
tokio = { version = "1.49.0", features = ["full"] }
blake3 = "1.8.3"
quote = "1.0.44"
proc-macro2 = "1.0.106"
syn = "2.0.114"
prettyplease = "0.2.37"
cbindgen = "0.29"
mach2 = "0.6.0"
ctrlc = "3.5.1"
indicatif = "0.18.3"
inquire = "0.9.2"
console = "0.16.2"
rocket = { version = "0.5.1", features = ["json"] }
uuid = { version = "1.20.0", features = ["v4"] }
comfy-table = "7.2.2"
autocxx = "0.30.0"
cxx = "1.0"
cmake = "0.1.57"
autocxx-build = "0.30.0"

# optimize the build script in debug builds
[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = "thin"
