[workspace]
members = ["crates/cli", "crates/uzu", "crates/benchmarks", "crates/dsl"]
resolver = "3"

[workspace.package]
version = "0.1.8"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["Mirai Tech <https://trymirai.com>"]
repository = "https://github.com/trymirai/uzu"

[workspace.dependencies]
benchmarks = { path = "crates/benchmarks", default-features = false }
dsl = { path = "crates/dsl" }
uzu = { path = "crates/uzu", default-features = false }
xgrammar = { package = "xgrammar-rs", version = "0.1", features = ["hf"] }
half = { version = "2.7", features = ["bytemuck", "num-traits"] }
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = "0.22"
objc2 = "0.6"
objc2-foundation = "0.3"
metal = { package = "mtl-rs", version = "0.1" }
block2 = "0.6"
bytemuck = "1.23"
bytesize = "2"
zerocopy = "0.8.27"
xxhash-rust = "0.8.15"
memmap2 = "0.9.8"
num-traits = "0.2"
regex = "1.12"
libc = "0.2"
minijinja = "2.17"
minijinja-contrib = { version = "2.17", features = ["pycompat"] }
clap = { version = "4.6", features = ["derive"] }
rand = "0.10"
rand_distr = "0.6.0"
sysinfo = "0.38"
itertools = "0.14"
schemars = { version = "1.2", features = ["derive"] }
is_close = "0.1"
serde_json5 = "0.2"
anyhow = "1.0"
async-trait = "0.1"
bindgen = "0.72"
walkdir = "2.5"
depfile = "0.1"
tempfile = "3.24"
clang-ast = "0.1"
rangemap = "1.7.1"
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }
blake3 = "1.8"
quote = "1.0"
proc-macro2 = "1.0"
syn = "2.0"
prettyplease = "0.2"
rhai = "1.24.0"
mach2 = "0.6"
cbindgen = "0.29"
ctrlc = "3.5"
indicatif = "0.18"
inquire = "0.9"
console = "0.16"
rocket = { version = "0.5", features = ["json"] }
uuid = { version = "1.20", features = ["v4"] }
comfy-table = "7.2"
autocxx = "0.30"
cxx = "1.0"
cmake = "0.1"
autocxx-build = "0.30"
test-tag = "0.1"
proptest = "1.10"
criterion = "0.8.2"
criterion-macro = "0.4.0"

# optimize the build script in debug builds
[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = "thin"

# optimize tests
[profile.test]
opt-level = 2
