[workspace]
members = [
    "crates/dsl",
    "crates/bindings-types",
    "crates/bindings",
    "crates/shoji",
    "crates/backend-uzu",
    "crates/backend-remote",
    "crates/json-transform",
    "crates/token-stream-parser",
    "crates/hanashi",
    "crates/nagare",
    "crates/download-manager",
    "crates/uzu",
    "crates/benchmarks",
    "crates/cli",
    "crates/cli-storage",
    "crates/cli-release",
]
resolver = "3"

[workspace.package]
version = "0.1.9"
edition = "2024"
rust-version = "1.94"
license = "MIT"
authors = ["Mirai Tech <https://trymirai.com>"]
repository = "https://github.com/trymirai/uzu"

[workspace.dependencies]
dsl = { path = "crates/dsl" }
bindings-types = { path = "crates/bindings-types", default-features = false }
bindings = { path = "crates/bindings", default-features = false }
shoji = { path = "crates/shoji", default-features = false }
backend-uzu = { path = "crates/backend-uzu", default-features = false }
backend-remote = { path = "crates/backend-remote", default-features = false }
json-transform = { path = "crates/json-transform", default-features = false }
token-stream-parser = { path = "crates/token-stream-parser", default-features = false }
hanashi = { path = "crates/hanashi", default-features = false }
nagare = { path = "crates/nagare", default-features = false }
download-manager = { path = "crates/download-manager", default-features = false }
benchmarks = { path = "crates/benchmarks", default-features = false }
uzu = { path = "crates/uzu", default-features = false }
xgrammar = { package = "xgrammar-rs", version = "0.1", features = ["hf"] }
half = { version = "2.7", features = ["bytemuck", "num-traits"] }
ndarray = "0.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokenizers = { version = "0.22", features = [
    "fancy-regex",
], default-features = false }
objc2 = "0.6.4"
objc2-foundation = "0.3.2"
objc2-security = "0.3.2"
metal = { package = "mtl-rs", version = "0.1" }
block2 = "0.6"
bytemuck = "1.23"
bytesize = "2"
zerocopy = "0.8.27"
xxhash-rust = "0.8.15"
memmap2 = "0.9.8"
num-traits = "0.2"
regex = "1.12"
fancy-regex = "0.17.0"
libc = "0.2"
minijinja = { version = "2.17.0", features = ["json", "preserve_order"] }
minijinja-contrib = { version = "2.17.0", features = ["pycompat"] }
clap = { version = "4.6", features = ["derive"] }
rand = "0.10"
rand_distr = "0.6.0"
sysinfo = "0.38"
itertools = "0.14"
schemars = { version = "1.2", features = ["derive"] }
is_close = "0.1"
serde_json5 = "0.2"
anyhow = "1.0"
async-trait = "0.1"
bindgen = "0.72"
walkdir = "2.5"
depfile = "0.1"
tempfile = "3.24"
clang-ast = "0.1"
rangemap = "1.7.1"
futures = "0.3"
tokio = { version = "1.49", features = ["full"] }
blake3 = "1.8"
quote = "1.0"
proc-macro2 = "1.0"
syn = { version = "2.0", features = ["full", "fold"] }
prettyplease = "0.2"
rhai = "1.24.0"
mach2 = "0.6"
cbindgen = "0.29"
ctrlc = "3.5"
indicatif = "0.18"
inquire = "0.9"
console = "0.16"
rocket = { version = "0.5", features = ["json"] }
uuid = { version = "1.20", features = ["v4", "v5"] }
comfy-table = { version = "7.2", default-features = false }
autocxx = "0.30"
cxx = "1.0"
cmake = "0.1"
autocxx-build = "0.30"
test-tag = "0.1"
proptest = { version = "1.10", default-features = false, features = ["std"] }
criterion = { version = "0.8.2", default-features = false }
criterion-macro = "0.4.0"
rustix = "1.1.4"
indexmap = { version = "2.13.0", features = ["serde"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
tracing-tree = "0.4.1"
tracing-appender = "0.2.4"
llm_json = "1.0.2"
tokio-stream = { version = "0.1.18", features = ["sync"] }
futures-util = "0.3.31"
async-fetcher = "0.12"
reqwest = { version = "0.13.2", features = [
    "json",
    "stream",
    "blocking",
    "query",
] }
tokio-util = { version = "0.7.17", default-features = false, features = ["rt"] }
async-shutdown = "0.2.2"
objc-sys = "0.3.5"
crc32c = "0.6.8"
base64 = "0.22.1"
chrono = { version = "0.4.42", features = ["serde"] }
jsonschema = "0.46.0"
# Please make sure to use compatible versions of the cargo-swift / uniffi pair.
# See: https://github.com/antoniusnaumann/cargo-swift?tab=readme-ov-file#installing-for-a-different-uniffi-version
uniffi = { version = "0.31.1", features = ["tokio"] }
napi = { version = "3.8.3", features = [
    "napi10",
    "object_indexmap",
    "tokio_rt",
] }
napi-derive = "3.5.2"
napi-build = "2.3.1"
pyo3 = { version = "0.28.3", features = [
    "extension-module",
    "abi3-py312",
    "experimental-async",
    "multiple-pymethods",
] }
pyo3-build-config = "0.28.3"
pyo3-async-runtimes = { version = "0.28.0", features = ["tokio-runtime"] }
pyo3-stub-gen = "0.22.1"
inventory = "0.3.24"
wasm-bindgen = { version = "0.2.114", features = ["serde-serialize"] }
serde-wasm-bindgen = "0.6.5"
wasm-bindgen-futures = "0.4.64"
tsify = { version = "0.5.6", features = ["js"] }
openai-harmony = "0.0.8"
dirs = "6.0.0"
dotenvy = "0.15.7"
ratatui = "0.30.0"
crossterm = "0.29.0"
async-openai = { version = "0.35.0", features = [
    "chat-completion",
    "model",
    "byot",
    "responses",
] }
hound = "3.5.1"
ignore = "0.4.25"
heck = "0.5.0"
keyring = { version = "3.6.3", features = [
    "apple-native",
    "windows-native",
    "linux-native-sync-persistent",
    "crypto-rust",
] }

[workspace.metadata.dinghy]
forward-cfgs = ["metal_backend", "grammar_xgrammar"]

[workspace.metadata.dinghy.test-attribute-aliases]
uzu_test = "dinghy_apple_runner_macros::test_case"
uzu_bench = "dinghy_apple_runner_macros::bench_case"

[profile.dev.build-override]
opt-level = 3

[profile.release]
lto = "thin"

[profile.test]
opt-level = 2
