# Standalone workspace for the Mirai GPUI app.
#
# This is intentionally NOT a member of the uzu workspace at the repo root.
# GPUI (in ../external/zed) resolves dozens of `*.workspace = true` deps against
# Zed's workspace and relies on a `[patch.crates-io]` override that only applies
# from the root workspace cargo is invoked from. Keeping `app/` as its own
# workspace lets the path-deps on GPUI and uzu each resolve against their own
# parent workspaces, and lets us replicate Zed's patch table here.
[workspace]
members = ["mirai-app", "ui-kit"]
resolver = "3"

# Replicated from external/zed/Cargo.toml [patch.crates-io]. GPUI's executor
# depends on these specific revisions of async-task/async-process. The other
# entries in Zed's table (livekit, calloop, notify, windows-capture) are for
# crates we don't pull, so they're omitted.
[patch.crates-io]
async-process = { git = "https://github.com/zed-industries/async-process.git", rev = "0b6d6713570af61806e1e5cb40e0f757cb93fd9d" }
async-task = { git = "https://github.com/smol-rs/async-task.git", rev = "b4486cd71e4e94fbda54ce6302444de14f4d190e" }

# Build scripts (uzu's Metal kernel compiler, gpui's shader/bindgen scripts) and
# proc-macros are painfully slow at opt-level 0.
[profile.dev.build-override]
opt-level = 3
