[package]
name = "uzu"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
half = { version = "2.6.0", features = ["bytemuck", "num-traits"] }
ndarray = "0.16.1"
safetensors = "0.6.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokenizers = "0.21.1"
mpsgraph = { git = "https://github.com/getmirai/mpsgraph-rs", rev = "371592c", package = "mpsgraph" }
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
block2 = "0.6.1"
metal = "0.32.0"
serde_bytes = "0.11.17"
bytemuck = "1.23.0"
num-traits = "0.2.19"
trie-rs = "0.4.2"
regex = "1.10"
libc = "0.2.172"
bitflags = "2.9.1"
minijinja = "2.10.2"
minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
trauma = { version = "2.2.6" }
base64 = "0.22.1"
security-framework = "3.2.0"
uuid = { version = "1.8.0", features = ["v4"] }
ed25519-dalek = { version = "2.1.1", features = ["pem", "pkcs8"] }
reqwest = { version = "0.12.19", features = ["json", "stream", "blocking"] }
tokio = { version = "1.45.1", features = [ "fs", "io-util", "macros", "rt-multi-thread", "net", "time" ] }
async-trait = "0.1.88"
futures-util = "0.3.31"
async-stream = "0.3.6"
chrono = "0.4.38"
log = "0.4.22"
tokio-stream = "0.1"
async-fetcher = "0.11.0"
async-shutdown = "0.2"
crc32c = "0.6.8"

[dev-dependencies]
is_close = "0.1.3"
rand = "0.9.1"
