[package]
name = "uzu"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
half = { version = "2.6.0", features = ["bytemuck", "num-traits"] }
ndarray = "0.16.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokenizers = "0.21.1"
# mpsgraph = { path = "../mpsgraph-rs" }
mpsgraph = { git = "https://github.com/getmirai/mpsgraph-rs", rev = "414c0d2", package = "mpsgraph" }
objc2 = "0.6.1"
objc2-foundation = "0.3.1"
metal = "0.32.0"
bytemuck = "1.23.0"
num-traits = "0.2.19"
regex = "1.10"
libc = "0.2.172"
bitflags = "2.9.1"
minijinja = "2.10.2"
minijinja-contrib = { version = "2.10.2", features = ["pycompat"] }
clap = { version = "4.5.39", features = ["derive"] }

[dev-dependencies]
is_close = "0.1.3"
rand = "0.9.1"
serde_json5 = "0.2.1"
