[package]
name = "backend-remote"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
shoji.workspace = true
async-openai.workspace = true
futures.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio-util.workspace = true
serde.workspace = true
reqwest.workspace = true
indexmap.workspace = true
