[package]
name = "benchmarks"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[dependencies]
uzu.workspace = true
serde.workspace = true
sysinfo.workspace = true
blake3.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mach2.workspace = true

[features]
default = ["metal"]

metal = ["uzu/metal"]
