[package]
name = "benchmarks"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
backend-uzu.workspace = true
serde.workspace = true
sysinfo.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
mach2.workspace = true

[features]
default = ["metal"]

metal = ["backend-uzu/metal"]
