[package]
name = "cargo-keisoku"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
description = "Cargo subcommand that samples system power while a cargo command runs"

[[bin]]
name = "cargo-keisoku"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
keisoku.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
