[package]
name = "cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
clap.workspace = true
backend-uzu.workspace = true
benchmarks.workspace = true
ctrlc.workspace = true
indicatif.workspace = true
inquire.workspace = true
console.workspace = true
rocket.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
comfy-table.workspace = true

[features]
default = ["metal"]

metal = ["benchmarks/metal", "backend-uzu/metal"]
