[package]
name = "cli-release"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "cli-release"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
ignore.workspace = true
serde_json.workspace = true
regex.workspace = true
heck.workspace = true
