[package]
name = "cli-release"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli-release"
path = "src/main.rs"

[dependencies]
clap.workspace = true
thiserror.workspace = true
ignore.workspace = true
serde_json.workspace = true
regex.workspace = true
heck.workspace = true
syn.workspace = true
