[package]
name = "cli-storage"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli-storage"
path = "src/main.rs"

[dependencies]
shoji.workspace = true
uzu.workspace = true
tokio.workspace = true
futures-util.workspace = true
crossterm.workspace = true
ratatui.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
dotenvy.workspace = true
