[package]
name = "cli-tools"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli-tools"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ignore.workspace = true
heck.workspace = true
syn.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
anyhow.workspace = true
indexmap.workspace = true
colored.workspace = true
