[package]
name = "cli-tools"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli-tools"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ignore.workspace = true
heck.workspace = true
syn.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
regex.workspace = true
serde_json.workspace = true
minijinja.workspace = true
anyhow.workspace = true
indexmap.workspace = true
colored.workspace = true
tokio.workspace = true

[target.'cfg(target_os = "macos")'.dependencies]
backend-uzu.workspace = true
uzu = { workspace = true, default-features = false, features = ["backend-metal", "capability-grammar"] }
keisoku.workspace = true
shoji.workspace = true
reqwest.workspace = true
csv.workspace = true
tokio-stream.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
