[package]
name = "cli-tools"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli-tools"
path = "src/main.rs"

[dependencies]
clap.workspace = true
ignore.workspace = true
heck.workspace = true
syn.workspace = true
serde.workspace = true
toml.workspace = true
toml_edit.workspace = true
regex.workspace = true
serde_json.workspace = true
minijinja.workspace = true
anyhow.workspace = true
indexmap.workspace = true
colored.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Heavy inference-stack dependencies, pulled in only by the `power-consumption`
# feature so that the default `cargo tools` build stays lightweight.
backend-uzu = { workspace = true, optional = true }
uzu = { workspace = true, default-features = false, features = ["backend-metal", "capability-grammar"], optional = true }
keisoku = { workspace = true, optional = true }
kiban = { workspace = true, optional = true }
shoji = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }
csv = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }

[features]
# Enables the `power-consumption` subcommand. macOS only (pulls in the Metal
# inference stack and keisoku). Off by default to keep `cargo tools` fast.
power-consumption = [
    "dep:backend-uzu",
    "dep:uzu",
    "dep:keisoku",
    "dep:kiban",
    "dep:shoji",
    "dep:reqwest",
    "dep:csv",
    "dep:tokio-stream",
    "tokio/time",
    "tokio/fs",
]

[lints]
workspace = true
