[package]
name = "cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[dependencies]
uzu = { workspace = true, features = [
    "backend-metal",
    "capability-grammar",
    "capability-cli",
] }
tokio.workspace = true
anyhow.workspace = true
