[package]
name = "cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[features]
default = ["backend-metal", "capability-grammar", "capability-cli"]
backend-cpu = ["uzu/backend-cpu"]
backend-metal = ["uzu/backend-metal"]
capability-grammar = ["uzu/capability-grammar"]
capability-tracing = ["uzu/capability-tracing"]
capability-cli = ["uzu/capability-cli"]

[dependencies]
uzu = { workspace = true, default-features = false }
tokio.workspace = true
anyhow.workspace = true
