[package]
name = "cli"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[[bin]]
name = "cli"
path = "src/main.rs"

[features]
default = ["backend-metal", "capability-grammar", "capability-cli"]
backend-cpu = ["uzu/backend-cpu"]
backend-metal = ["uzu/backend-metal"]
capability-grammar = ["uzu/capability-grammar"]
capability-cli = ["uzu/capability-cli"]

[dependencies]
backend-uzu.workspace = true
uzu = { workspace = true, default-features = false }
tokio = { workspace = true, features = ["full"] }
anyhow.workspace = true
clap.workspace = true
comfy-table.workspace = true
indicatif.workspace = true
serde.workspace = true
serde_json.workspace = true
jsonschema.workspace = true
rocket.workspace = true
uuid.workspace = true
tokio-stream.workspace = true
sysinfo.workspace = true
shoji.workspace = true

[lints]
workspace = true
