[package]
name = "download-manager"
edition.workspace = true
rust-version.workspace = true
version.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies]
tokio.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true
uuid.workspace = true
crc32c.workspace = true
base64.workspace = true
tracing.workspace = true
chrono.workspace = true
reqwest.workspace = true
statig = { version = "0.4.1", features = ["async"] }

[target.'cfg(target_vendor = "apple")'.dependencies]
objc2.workspace = true
objc2-foundation.workspace = true
block2.workspace = true
objc-sys.workspace = true

[dev-dependencies]
tempfile.workspace = true
libc.workspace = true
indicatif.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
rstest.workspace = true
mock-registry.workspace = true
wiremock.workspace = true
chrono.workspace = true

[[test]]
name = "unit"
path = "tests/unit/test_entry.rs"

[[test]]
name = "integration"
path = "tests/integration/mod.rs"
